Increase action menu height to prevent text bleeding

--- a/styles.css
+++ b/styles.css
@@ -413,7 +413,7 @@ body {
     padding: 16px 20px 20px 20px;
     display: flex;
     flex-direction: column;
-    min-height: 0;
+    min-height: 290px;
     overflow-y: auto;
     justify-content: space-between;
 }
